# serializer version: 1
# name: test_publish_example_dry_run
  dict({
    'exit_code': 0,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-e656679f'...
      Published 'example_a_e656679f-1.0.0-py3-none-any.whl'
      Published 'example_a_e656679f-1.0.0.tar.gz'
      Published 'example_b_e656679f-1.0.0-py3-none-any.whl'
      Published 'example_b_e656679f-1.0.0.tar.gz'
      Published 'example_b_e656679f-2.0.0-py3-none-any.whl'
      Published 'example_b_e656679f-2.0.0.tar.gz'
      Published 'example_b_e656679f-3.0.0-py3-none-any.whl'
      Published 'example_b_e656679f-3.0.0.tar.gz'
      Published 'example_e656679f-0.0.0.tar.gz'
      Published 1 targets (9 new files) in [TIME]
  
    ''',
    'stdout': '''
      Would execute: uv publish --publish-url https://test.pypi.org/legacy/ [DISTDIR]/example_a_e656679f-1.0.0-py3-none-any.whl
      Would execute: uv publish --publish-url https://test.pypi.org/legacy/ [DISTDIR]/example_a_e656679f-1.0.0.tar.gz
      Would execute: uv publish --publish-url https://test.pypi.org/legacy/ [DISTDIR]/example_b_e656679f-1.0.0-py3-none-any.whl
      Would execute: uv publish --publish-url https://test.pypi.org/legacy/ [DISTDIR]/example_b_e656679f-1.0.0.tar.gz
      Would execute: uv publish --publish-url https://test.pypi.org/legacy/ [DISTDIR]/example_b_e656679f-2.0.0-py3-none-any.whl
      Would execute: uv publish --publish-url https://test.pypi.org/legacy/ [DISTDIR]/example_b_e656679f-2.0.0.tar.gz
      Would execute: uv publish --publish-url https://test.pypi.org/legacy/ [DISTDIR]/example_b_e656679f-3.0.0-py3-none-any.whl
      Would execute: uv publish --publish-url https://test.pypi.org/legacy/ [DISTDIR]/example_b_e656679f-3.0.0.tar.gz
      Would execute: uv publish --publish-url https://test.pypi.org/legacy/ [DISTDIR]/example_e656679f-0.0.0.tar.gz
      example-e656679f
  
    ''',
  })
# ---
# name: test_publish_example_no_credentials
  dict({
    'exit_code': 1,
    'stderr': '''
      No credentials found for publish!
      Provide an API token via `PACKSE_PUBLISH_PASSWORD` or disable authentication with `--anonymous`.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_no_username_defaults_to_token
  dict({
    'exit_code': 0,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-e656679f'...
      Published example_a_e656679f-1.0.0-py3-none-any.whl in [TIME]:
      
          <mock uv logs>
      
      Published 'example_a_e656679f-1.0.0-py3-none-any.whl'
      Published example_a_e656679f-1.0.0.tar.gz in [TIME]:
      
          <mock uv logs>
      
      Published 'example_a_e656679f-1.0.0.tar.gz'
      Published example_b_e656679f-1.0.0-py3-none-any.whl in [TIME]:
      
          <mock uv logs>
      
      Published 'example_b_e656679f-1.0.0-py3-none-any.whl'
      Published example_b_e656679f-1.0.0.tar.gz in [TIME]:
      
          <mock uv logs>
      
      Published 'example_b_e656679f-1.0.0.tar.gz'
      Published example_b_e656679f-2.0.0-py3-none-any.whl in [TIME]:
      
          <mock uv logs>
      
      Published 'example_b_e656679f-2.0.0-py3-none-any.whl'
      Published example_b_e656679f-2.0.0.tar.gz in [TIME]:
      
          <mock uv logs>
      
      Published 'example_b_e656679f-2.0.0.tar.gz'
      Published example_b_e656679f-3.0.0-py3-none-any.whl in [TIME]:
      
          <mock uv logs>
      
      Published 'example_b_e656679f-3.0.0-py3-none-any.whl'
      Published example_b_e656679f-3.0.0.tar.gz in [TIME]:
      
          <mock uv logs>
      
      Published 'example_b_e656679f-3.0.0.tar.gz'
      Published example_e656679f-0.0.0.tar.gz in [TIME]:
      
          <mock uv logs>
      
      Published 'example_e656679f-0.0.0.tar.gz'
      Published 1 targets (9 new files) in [TIME]
  
    ''',
    'stdout': '''
      example-e656679f
  
    ''',
  })
# ---
# name: test_publish_example_uv_fails_with_already_exists
  dict({
    'exit_code': 1,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-e656679f'...
      Publish for 'example_a_e656679f-1.0.0-py3-none-any.whl' already exists.
      Failed to publish 1/1 targets.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_uv_fails_with_rate_limit
  dict({
    'exit_code': 1,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-e656679f'...
      Publish of 'example_a_e656679f-1.0.0-py3-none-any.whl' failed due to rate limits.
      Failed to publish 1/1 targets.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_uv_fails_with_unknown_error
  dict({
    'exit_code': 1,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-e656679f'...
      Publishing example_a_e656679f-1.0.0-py3-none-any.whl with uv failed:
          <uv error message>
      .
      Failed to publish 1/1 targets.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_uv_succeeds
  dict({
    'exit_code': 0,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-e656679f'...
      Published example_a_e656679f-1.0.0-py3-none-any.whl in [TIME]:
      
          <uv happy message>
      
      Published 'example_a_e656679f-1.0.0-py3-none-any.whl'
      Published example_a_e656679f-1.0.0.tar.gz in [TIME]:
      
          <uv happy message>
      
      Published 'example_a_e656679f-1.0.0.tar.gz'
      Published example_b_e656679f-1.0.0-py3-none-any.whl in [TIME]:
      
          <uv happy message>
      
      Published 'example_b_e656679f-1.0.0-py3-none-any.whl'
      Published example_b_e656679f-1.0.0.tar.gz in [TIME]:
      
          <uv happy message>
      
      Published 'example_b_e656679f-1.0.0.tar.gz'
      Published example_b_e656679f-2.0.0-py3-none-any.whl in [TIME]:
      
          <uv happy message>
      
      Published 'example_b_e656679f-2.0.0-py3-none-any.whl'
      Published example_b_e656679f-2.0.0.tar.gz in [TIME]:
      
          <uv happy message>
      
      Published 'example_b_e656679f-2.0.0.tar.gz'
      Published example_b_e656679f-3.0.0-py3-none-any.whl in [TIME]:
      
          <uv happy message>
      
      Published 'example_b_e656679f-3.0.0-py3-none-any.whl'
      Published example_b_e656679f-3.0.0.tar.gz in [TIME]:
      
          <uv happy message>
      
      Published 'example_b_e656679f-3.0.0.tar.gz'
      Published example_e656679f-0.0.0.tar.gz in [TIME]:
      
          <uv happy message>
      
      Published 'example_e656679f-0.0.0.tar.gz'
      Published 1 targets (9 new files) in [TIME]
  
    ''',
    'stdout': '''
      example-e656679f
  
    ''',
  })
# ---
# name: test_publish_example_uv_succeeds_parallel
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-e656679f
  
    ''',
  })
# ---
